<resources>
    <string name="app_name">Aplikasi Matematika</string>
    <string name="tinggi">Tinggi</string>
    <string name="panjang">Panjang</string>
    <string name="lebar">Lebar</string>
    <string name="hitung">Hitung</string>
    <string name="hasil">Hasil</string>
    <string name="jumlah">Jumlah</string>
    <string name="is_empty">Tidak boleh kosong</string>
    <string name="valid_number">Harus Sebuah Bilangan</string>
    <string name="nama_buah">Nama Buah</string>
</resources>
