<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/edt_panjang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/panjang"
            android:inputType="numberDecimal"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/edt_lebar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/lebar"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/edt_tinggi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/tinggi"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btn_hitung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/hitung"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_hasil"
            android:layout_width="match_parent"
            android:layout_margin="15dp"
            android:layout_height="wrap_content"
            android:hint="@string/hasil"
            android:textSize="30dp"/>


    </LinearLayout>




    </RelativeLayout>